# BuckFinder

./: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
best.mlpackage/: Manifest.json
buck-detector/: Package.swift
buck-detector/Sources/: main.swift
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: buck-detector
src-tauri/resources/best.mlpackage/Data/com.apple.CoreML/: model.mlmodel
src-tauri/src/: commands.rs  detector.rs  lib.rs  main.rs
src/components/: DropZone.jsx  ProgressBar.jsx  ResultsGrid.jsx
