[package]
name = "buckfinder"
version = "1.0.0"
description = "AI-powered trail camera photo filter"
authors = ["you"]
edition = "2021"

[lib]
name = "buckfinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
chrono = "0.4"
dirs = "5"
